--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta
-      charset="UTF-8"
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+
     <title>Студія</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -145,6 +143,11 @@
           <h2 class="section-features__titleof">Особливості</h2>
           <ul class="section-features__list">
             <li class="section-features__item">
+              <div class="section-features__img">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-svg1"></use>
+                </svg>
+              </div>
               <h3 class="section-features__title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="section-features__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -152,6 +155,11 @@
               </p>
             </li>
             <li class="section-features__item">
+              <div class="section-features__img">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-svg2"></use>
+                </svg>
+              </div>
               <h3 class="section-features__title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="section-features__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -159,12 +167,22 @@
               </p>
             </li>
             <li class="section-features__item">
+              <div class="section-features__img">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-svg3"></use>
+                </svg>
+              </div>
               <h3 class="section-features__title">ПЛАНУВАННЯ</h3>
               <p class="section-features__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="section-features__item">
+              <div class="section-features__img">
+                <svg width="70" height="70">
+                  <use href="./images/icons.svg#icon-svg4"></use>
+                </svg>
+              </div>
               <h3 class="section-features__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="section-features__text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -204,7 +222,7 @@
                     ./images/foto1-480@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="max-width: 767px"
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
@@ -212,7 +230,7 @@
                     ./images/foto1-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 768px"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -220,7 +238,7 @@
                     ./images/foto1-1200@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 1200px"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   class="section-team__img"
@@ -277,7 +295,7 @@
                     ./images/foto2-480@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="max-width: 767px"
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
@@ -285,7 +303,7 @@
                     ./images/foto2-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 768px"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -293,7 +311,7 @@
                     ./images/foto2-1200@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 1200px"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   class="section-team__img"
@@ -350,7 +368,7 @@
                     ./images/foto3-480@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="max-width: 767px"
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
@@ -358,7 +376,7 @@
                     ./images/foto3-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 768px"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -366,7 +384,7 @@
                     ./images/foto3-1200@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 1200px"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   class="section-team__img"
@@ -423,7 +441,7 @@
                     ./images/foto4-480@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="max-width: 767px"
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
@@ -431,7 +449,7 @@
                     ./images/foto4-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 768px"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="
@@ -439,7 +457,7 @@
                     ./images/foto4-1200@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="min-width: 1200px"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   class="section-team__img"
