--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta
-      charset="UTF-8"
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Студія</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -173,17 +170,24 @@
                       srcset="
                         ./images/ret1-480.jpg    1x,
                         ./images/ret1-480@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(max-width: 767px)" />
+
                     <source
                       srcset="
                         ./images/ret1-768.jpg    1x,
                         ./images/ret1-768@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret1-1200.jpg    1x,
                         ./images/ret1-1200@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
                       src="./images/ret1-480.jpg"
@@ -214,18 +218,24 @@
                         ./images/ret2-480.jpg    1x,
                         ./images/ret2-480@2x.jpg 2x
                       "
+                      type="image/webp"
+                      media="(max-width: 767px)"
                     />
                     <source
                       srcset="
                         ./images/ret2-768.jpg    1x,
                         ./images/ret2-768@2x.jpg 2x
                       "
+                      type="image/webp"
+                      media="(min-width: 768px)"
                     />
                     <source
                       srcset="
                         ./images/ret2-1200.jpg    1x,
                         ./images/ret2-1200@2x.jpg 2x
                       "
+                      type="image/webp"
+                      media="(min-width: 1200px)"
                     />
                     <img
                       class="section-project__img"
@@ -259,17 +269,23 @@
                       srcset="
                         ./images/ret3-480.jpg    1x,
                         ./images/ret3-480@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret3-768.jpg    1x,
                         ./images/ret3-768@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret3-1200.jpg    1x,
                         ./images/ret3-1200@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
                       src="./images/ret3-480.jpg"
@@ -299,17 +315,23 @@
                       srcset="
                         ./images/ret4-480.jpg    1x,
                         ./images/ret4-480@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret4-768.jpg    1x,
                         ./images/ret4-768@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret4-1200.jpg    1x,
                         ./images/ret4-1200@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
                       src="./images/ret4-480.jpg"
@@ -339,17 +361,23 @@
                       srcset="
                         ./images/ret5-480.jpg    1x,
                         ./images/ret5-480@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret5-768.jpg    1x,
                         ./images/ret5-768@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret5-1200.jpg    1x,
                         ./images/ret5-1200@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
                       src="./images/ret5-480.jpg"
@@ -379,17 +407,23 @@
                       srcset="
                         ./images/ret6-480.jpg    1x,
                         ./images/ret6-480@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret6-768.jpg    1x,
                         ./images/ret6-768@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret6-1200.jpg    1x,
                         ./images/ret6-1200@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
                       src="./images/ret6-480.jpg"
@@ -421,17 +455,23 @@
                       srcset="
                         ./images/ret7-480.jpg    1x,
                         ./images/ret7-480@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret7-768.jpg    1x,
                         ./images/ret7-768@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret7-1200.jpg    1x,
                         ./images/ret7-1200@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
                       src="./images/ret7-480.jpg"
@@ -463,17 +503,23 @@
                       srcset="
                         ./images/ret8-480.jpg    1x,
                         ./images/ret8-480@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret8-768.jpg    1x,
                         ./images/ret8-768@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret8-1200.jpg    1x,
                         ./images/ret8-1200@2x.jpg 2x
-                      " />
+                      "
+                      type="image/webp"
+                      media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
                       src="./images/ret8-480.jpg"
@@ -504,18 +550,24 @@
                         ./images/ret9-480.jpg    1x,
                         ./images/ret9-480@2x.jpg 2x
                       "
+                      type="image/webp"
+                      media="(max-width: 767px)"
                     />
                     <source
                       srcset="
                         ./images/ret9-768.jpg    1x,
                         ./images/ret9-768@2x.jpg 2x
                       "
+                      type="image/webp"
+                      media="(min-width: 768px)"
                     />
                     <source
                       srcset="
                         ./images/ret9-1200.jpg    1x,
                         ./images/ret9-1200@2x.jpg 2x
                       "
+                      type="image/webp"
+                      media="(min-width: 1200px)"
                     />
                     <img
                       class="section-project__img"
