--- a/index.html
+++ b/index.html
@@ -55,36 +55,38 @@
               <a class="menu-container__link" href="#">Контакти</a>
             </li>
           </ul>
-          <ul class="menu-contacts">
-            <li class="menu-contacts__item">
-              <a
-                class="menu-contacts__link menu-contacts__link--phone"
-                href="tel:+380961111111"
-              >
-                +38 096 111 11 11
-              </a>
-            </li>
-            <li class="menu-contacts__item">
-              <a class="menu-contacts__link" href="mailto:info@devstudio.com">
-                info@devstudio.com
-              </a>
-            </li>
-          </ul>
+          <div>
+            <ul class="menu-contacts">
+              <li class="menu-contacts__item">
+                <a
+                  class="menu-contacts__link menu-contacts__link--phone"
+                  href="tel:+380961111111"
+                >
+                  +38 096 111 11 11
+                </a>
+              </li>
+              <li class="menu-contacts__item">
+                <a class="menu-contacts__link" href="mailto:info@devstudio.com">
+                  info@devstudio.com
+                </a>
+              </li>
+            </ul>
 
-          <ul class="menu-social">
-            <li class="menu-social__item">
-              <a class="menu-social__link" href="#">Instagram</a>
-            </li>
-            <li class="menu-social__item">
-              <a class="menu-social__link" href="#">Twitter</a>
-            </li>
-            <li class="menu-social__item">
-              <a class="menu-social__link" href="#">Facebook</a>
-            </li>
-            <li class="menu-social__item">
-              <a class="menu-social__link" href="#">LinkedIn</a>
-            </li>
-          </ul>
+            <ul class="menu-social">
+              <li class="menu-social__item">
+                <a class="menu-social__link" href="#">Instagram</a>
+              </li>
+              <li class="menu-social__item">
+                <a class="menu-social__link" href="#">Twitter</a>
+              </li>
+              <li class="menu-social__item">
+                <a class="menu-social__link" href="#">Facebook</a>
+              </li>
+              <li class="menu-social__item">
+                <a class="menu-social__link" href="#">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
         </div>
         <!------------------------------------------------- END of MENU-CONTAINER -------------------------------------------------->
         <nav class="main-nav">
