--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     ./images/foto1-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="(min-width: 768px)"
+                  media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
                   srcset="
@@ -305,7 +305,7 @@
                     ./images/foto2-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="(min-width: 768px)"
+                  media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
                   srcset="
@@ -378,7 +378,7 @@
                     ./images/foto3-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="(min-width: 768px)"
+                  media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
                   srcset="
@@ -451,7 +451,7 @@
                     ./images/foto4-768@2x.jpg 2x
                   "
                   type="image/webp"
-                  media="(min-width: 768px)"
+                  media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
                   srcset="
