--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     ./images/foto1-480.jpg    1x,
                     ./images/foto1-480@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(max-width: 767px)"
                 />
                 <source
@@ -231,7 +231,7 @@
                     ./images/foto1-768.jpg    1x,
                     ./images/foto1-768@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
@@ -239,7 +239,7 @@
                     ./images/foto1-1200.jpg    1x,
                     ./images/foto1-1200@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 1200px)"
                 />
                 <img
@@ -296,7 +296,7 @@
                     ./images/foto2-480.jpg    1x,
                     ./images/foto2-480@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(max-width: 767px)"
                 />
                 <source
@@ -304,7 +304,7 @@
                     ./images/foto2-768.jpg    1x,
                     ./images/foto2-768@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
@@ -312,7 +312,7 @@
                     ./images/foto2-1200.jpg    1x,
                     ./images/foto2-1200@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 1200px)"
                 />
                 <img
@@ -369,7 +369,7 @@
                     ./images/foto3-480.jpg    1x,
                     ./images/foto3-480@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(max-width: 767px)"
                 />
                 <source
@@ -377,7 +377,7 @@
                     ./images/foto3-768.jpg    1x,
                     ./images/foto3-768@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
@@ -385,7 +385,7 @@
                     ./images/foto3-1200.jpg    1x,
                     ./images/foto3-1200@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 1200px)"
                 />
                 <img
@@ -442,7 +442,7 @@
                     ./images/foto4-480.jpg    1x,
                     ./images/foto4-480@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(max-width: 767px)"
                 />
                 <source
@@ -450,7 +450,7 @@
                     ./images/foto4-768.jpg    1x,
                     ./images/foto4-768@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 768px) and (max-width: 1199px)"
                 />
                 <source
@@ -458,7 +458,7 @@
                     ./images/foto4-1200.jpg    1x,
                     ./images/foto4-1200@2x.jpg 2x
                   "
-                  type="image/webp"
+                  type="image"
                   media="(min-width: 1200px)"
                 />
                 <img
