--- a/portfolio.html
+++ b/portfolio.html
@@ -171,7 +171,7 @@
                         ./images/ret1-480.jpg    1x,
                         ./images/ret1-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)" />
 
                     <source
@@ -179,14 +179,14 @@
                         ./images/ret1-768.jpg    1x,
                         ./images/ret1-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret1-1200.jpg    1x,
                         ./images/ret1-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
@@ -218,7 +218,7 @@
                         ./images/ret2-480.jpg    1x,
                         ./images/ret2-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)"
                     />
                     <source
@@ -226,7 +226,7 @@
                         ./images/ret2-768.jpg    1x,
                         ./images/ret2-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)"
                     />
                     <source
@@ -234,7 +234,7 @@
                         ./images/ret2-1200.jpg    1x,
                         ./images/ret2-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)"
                     />
                     <img
@@ -270,21 +270,21 @@
                         ./images/ret3-480.jpg    1x,
                         ./images/ret3-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret3-768.jpg    1x,
                         ./images/ret3-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret3-1200.jpg    1x,
                         ./images/ret3-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
@@ -316,21 +316,21 @@
                         ./images/ret4-480.jpg    1x,
                         ./images/ret4-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret4-768.jpg    1x,
                         ./images/ret4-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret4-1200.jpg    1x,
                         ./images/ret4-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
@@ -362,21 +362,21 @@
                         ./images/ret5-480.jpg    1x,
                         ./images/ret5-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret5-768.jpg    1x,
                         ./images/ret5-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret5-1200.jpg    1x,
                         ./images/ret5-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
@@ -408,21 +408,21 @@
                         ./images/ret6-480.jpg    1x,
                         ./images/ret6-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret6-768.jpg    1x,
                         ./images/ret6-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret6-1200.jpg    1x,
                         ./images/ret6-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
@@ -456,21 +456,21 @@
                         ./images/ret7-480.jpg    1x,
                         ./images/ret7-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret7-768.jpg    1x,
                         ./images/ret7-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret7-1200.jpg    1x,
                         ./images/ret7-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
@@ -504,21 +504,21 @@
                         ./images/ret8-480.jpg    1x,
                         ./images/ret8-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)" />
                     <source
                       srcset="
                         ./images/ret8-768.jpg    1x,
                         ./images/ret8-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)" />
                     <source
                       srcset="
                         ./images/ret8-1200.jpg    1x,
                         ./images/ret8-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)" />
                     <img
                       class="section-project__img"
@@ -550,7 +550,7 @@
                         ./images/ret9-480.jpg    1x,
                         ./images/ret9-480@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(max-width: 767px)"
                     />
                     <source
@@ -558,7 +558,7 @@
                         ./images/ret9-768.jpg    1x,
                         ./images/ret9-768@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 768px)"
                     />
                     <source
@@ -566,7 +566,7 @@
                         ./images/ret9-1200.jpg    1x,
                         ./images/ret9-1200@2x.jpg 2x
                       "
-                      type="image/webp"
+                      type="image"
                       media="(min-width: 1200px)"
                     />
                     <img
